--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_blue_plus: ^1.0.0
+  flutter_blue_plus: ^1.34.5
   provider: ^6.1.2 # Optionnel pour la gestion d'état
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
